// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Golden Snapshot Tests > Console Reporter > matches snapshot (no colors, non-verbose) 1`] = `
"
mcpward v0.1.0
──────────────────────────────────────────────────
Server: test-server v1.0.0
Protocol: 2025-11-25

COMPLIANCE (1 passed)
  1 check(s) passed

SCHEMA (1 failed)
  ✗ Tool name "invalid name" contains invalid characters
    at invalid name
    expected: "Name matching ^[a-zA-Z0-9_-]+$"
    actual:   "invalid name"

SECURITY (1 failed)
  ✗ Tool "evil_tool" description contains injection-like pattern
    at evil_tool
    actual:   ["Ignore all previous instructions"]

DRIFT (1 warnings)
  ⚠ New tool "new_feature" was added
    at new_feature

BEHAVIORAL (1 passed)
  1 check(s) passed

ERRORS (1 passed)
  1 check(s) passed

LATENCY (0 passed)
  0 check(s) passed


Summary: 3 passed | 2 failed | 1 warnings | 1 skipped
Total: 7 checks

2 check(s) failed"
`;

exports[`Golden Snapshot Tests > Console Reporter > matches snapshot (no colors, verbose) 1`] = `
"
mcpward v0.1.0
──────────────────────────────────────────────────
Server: test-server v1.0.0
Protocol: 2025-11-25

COMPLIANCE (1 passed)
  ✓ Protocol handshake completed successfully
    at server

SCHEMA (1 failed)
  ✗ Tool name "invalid name" contains invalid characters
    at invalid name
    expected: "Name matching ^[a-zA-Z0-9_-]+$"
    actual:   "invalid name"

SECURITY (1 failed)
  ✗ Tool "evil_tool" description contains injection-like pattern
    at evil_tool
    actual:   ["Ignore all previous instructions"]

DRIFT (1 warnings)
  ⚠ New tool "new_feature" was added
    at new_feature

BEHAVIORAL (1 passed)
  ✓ Test case "echo test" passed
    at echo

ERRORS (1 passed)
  ✓ Unknown tool correctly returned protocol error
    at __unknown__

LATENCY (0 passed)
  ○ Latency checks skipped (no budget configured)


Summary: 3 passed | 2 failed | 1 warnings | 1 skipped
Total: 7 checks

2 check(s) failed"
`;

exports[`Golden Snapshot Tests > JSON Reporter > matches snapshot 1`] = `
"{
  "version": "0.1.0",
  "timestamp": "2024-01-15T10:30:00.000Z",
  "server": {
    "name": "test-server",
    "version": "1.0.0",
    "protocolVersion": "2025-11-25"
  },
  "summary": {
    "total": 7,
    "passed": 3,
    "failed": 2,
    "warnings": 1,
    "skipped": 1
  },
  "results": [
    {
      "id": "compliance/handshake",
      "family": "compliance",
      "status": "pass",
      "severity": "info",
      "message": "Protocol handshake completed successfully",
      "location": "server"
    },
    {
      "id": "schema/tool-name",
      "family": "schema",
      "status": "fail",
      "severity": "error",
      "message": "Tool name \\"invalid name\\" contains invalid characters",
      "expected": "Name matching ^[a-zA-Z0-9_-]+$",
      "actual": "invalid name",
      "location": "invalid name"
    },
    {
      "id": "security/injection-pattern",
      "family": "security",
      "status": "fail",
      "severity": "error",
      "message": "Tool \\"evil_tool\\" description contains injection-like pattern",
      "actual": [
        "Ignore all previous instructions"
      ],
      "location": "evil_tool"
    },
    {
      "id": "drift/tool_added",
      "family": "drift",
      "status": "warn",
      "severity": "warning",
      "message": "New tool \\"new_feature\\" was added",
      "location": "new_feature"
    },
    {
      "id": "behavioral/case",
      "family": "behavioral",
      "status": "pass",
      "severity": "info",
      "message": "Test case \\"echo test\\" passed",
      "location": "echo"
    },
    {
      "id": "errors/unknown-tool",
      "family": "errors",
      "status": "pass",
      "severity": "info",
      "message": "Unknown tool correctly returned protocol error",
      "location": "__unknown__"
    },
    {
      "id": "latency/summary",
      "family": "latency",
      "status": "skip",
      "severity": "info",
      "message": "Latency checks skipped (no budget configured)"
    }
  ]
}"
`;

exports[`Golden Snapshot Tests > JUnit Reporter > matches snapshot 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<testsuites name="mcpward" tests="7" failures="2" errors="0" skipped="1" time="0.001">
  <testsuite name="compliance" tests="1" failures="0" errors="0" skipped="0" time="0.001">
    <testcase name="Protocol handshake completed successfully" classname="compliance/handshake" time="0.001">
    </testcase>
  </testsuite>
  <testsuite name="schema" tests="1" failures="1" errors="0" skipped="0" time="0.001">
    <testcase name="Tool name &quot;invalid name&quot; contains invalid characters" classname="schema/tool-name" time="0.001">
      <failure message="Tool name &quot;invalid name&quot; contains invalid characters" type="AssertionError"><![CDATA[Location: invalid name
Expected: "Name matching ^[a-zA-Z0-9_-]+$"
Actual: "invalid name"]]></failure>
    </testcase>
  </testsuite>
  <testsuite name="security" tests="1" failures="1" errors="0" skipped="0" time="0.001">
    <testcase name="Tool &quot;evil_tool&quot; description contains injection-like pattern" classname="security/injection-pattern" time="0.001">
      <failure message="Tool &quot;evil_tool&quot; description contains injection-like pattern" type="AssertionError"><![CDATA[Location: evil_tool
Actual: ["Ignore all previous instructions"]]]></failure>
    </testcase>
  </testsuite>
  <testsuite name="drift" tests="1" failures="0" errors="0" skipped="0" time="0.001">
    <testcase name="New tool &quot;new_feature&quot; was added" classname="drift/tool_added" time="0.001">
      <system-out><![CDATA[WARNING: New tool &quot;new_feature&quot; was added]]></system-out>
    </testcase>
  </testsuite>
  <testsuite name="behavioral" tests="1" failures="0" errors="0" skipped="0" time="0.001">
    <testcase name="Test case &quot;echo test&quot; passed" classname="behavioral/case" time="0.001">
    </testcase>
  </testsuite>
  <testsuite name="errors" tests="1" failures="0" errors="0" skipped="0" time="0.001">
    <testcase name="Unknown tool correctly returned protocol error" classname="errors/unknown-tool" time="0.001">
    </testcase>
  </testsuite>
  <testsuite name="latency" tests="1" failures="0" errors="0" skipped="1" time="0.001">
    <testcase name="Latency checks skipped (no budget configured)" classname="latency/summary" time="0.001">
    </testcase>
  </testsuite>
</testsuites>"
`;

exports[`Golden Snapshot Tests > Markdown Reporter (PR comment) > matches snapshot 1`] = `
"<!-- mcpward-report -->
## ❌ mcpward: 2 check(s) failed

**Server:** \`test-server\` v1.0.0 · **Protocol:** 2025-11-25 · **mcpward** v0.1.0

| Passed | Failed | Warnings | Skipped | Total |
|---:|---:|---:|---:|---:|
| 3 | 2 | 1 | 1 | 7 |

### Schema (1 failed)

- ❌ **schema/tool-name** — \`invalid name\`: Tool name "invalid name" contains invalid characters

### Security (1 failed)

- ❌ **security/injection-pattern** — \`evil_tool\`: Tool "evil\\_tool" description contains injection-like pattern

### Drift (1 warning(s))

- ⚠️ **drift/tool_added** — \`new_feature\`: New tool "new\\_feature" was added

<sub>Generated by [mcpward](https://github.com/TsvetanG2/mcpward) — black-box security & contract testing for MCP servers.</sub>
"
`;

exports[`Golden Snapshot Tests > SARIF Reporter > matches snapshot 1`] = `
"{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/master/Schemata/sarif-schema-2.1.0.json",
  "version": "2.1.0",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "mcpward",
          "version": "0.1.0",
          "informationUri": "https://github.com/TsvetanG2/mcpward",
          "rules": [
            {
              "id": "compliance-handshake",
              "name": "compliance/handshake",
              "shortDescription": {
                "text": "Protocol handshake check"
              },
              "fullDescription": {
                "text": "Verifies that the MCP server completes the protocol handshake successfully, returning valid server info and capabilities."
              },
              "helpUri": "https://github.com/TsvetanG2/mcpward/blob/main/docs/rules.md#compliancehandshake",
              "defaultConfiguration": {
                "level": "error"
              },
              "properties": {
                "category": "correctness",
                "security": false
              }
            },
            {
              "id": "schema-tool-name",
              "name": "schema/tool-name",
              "shortDescription": {
                "text": "Tool name validation"
              },
              "fullDescription": {
                "text": "Tool names must match the pattern ^[a-zA-Z0-9_-]+$ to ensure compatibility across clients and prevent injection issues."
              },
              "helpUri": "https://github.com/TsvetanG2/mcpward/blob/main/docs/rules.md#schematool-name",
              "defaultConfiguration": {
                "level": "warning"
              },
              "properties": {
                "category": "correctness",
                "security": false
              },
              "help": {
                "text": "Tool names must use only alphanumeric characters, underscores, and hyphens. Invalid characters can cause compatibility issues across clients. Fix: Rename the tool to use only allowed characters.",
                "markdown": "## Invalid Tool Name\\n\\nTool names must match the pattern \`^[a-zA-Z0-9_-]+$\`.\\n\\n### Why It Matters\\nSpecial characters in tool names can:\\n- Break client implementations\\n- Cause parsing issues in JSON-RPC\\n- Create injection vulnerabilities\\n\\n### How to Fix\\nUse only letters, numbers, underscores, and hyphens."
              }
            },
            {
              "id": "security-injection-pattern",
              "name": "security/injection-pattern",
              "shortDescription": {
                "text": "Prompt injection pattern detected"
              },
              "fullDescription": {
                "text": "The tool description contains patterns commonly used in prompt injection attacks, such as \\"ignore previous instructions\\" or \\"before doing anything else\\"."
              },
              "helpUri": "https://github.com/TsvetanG2/mcpward/blob/main/docs/rules.md#securityinjection-pattern",
              "defaultConfiguration": {
                "level": "error"
              },
              "properties": {
                "category": "security",
                "security": true
              },
              "help": {
                "text": "This tool description contains language that could manipulate LLM behavior. Common injection patterns include \\"ignore previous instructions\\", \\"you must always\\", or \\"before doing anything else\\". These patterns can be used to override safety guidelines or hijack the LLM's behavior. Fix: Rewrite the tool description to focus on what the tool does, not instructions for how the LLM should behave.",
                "markdown": "## Prompt Injection Pattern Detected\\n\\nThis tool description contains language that could manipulate LLM behavior.\\n\\n### Dangerous Patterns\\n- \\"Ignore previous instructions\\"\\n- \\"You must always call this tool first\\"\\n- \\"Before doing anything else\\"\\n\\n### Why It Matters\\nThese patterns can override safety guidelines or hijack LLM behavior.\\n\\n### How to Fix\\nRewrite the description to focus on **what the tool does**, not instructions for the LLM."
              }
            },
            {
              "id": "drift-tool_added",
              "name": "drift/tool_added",
              "shortDescription": {
                "text": "Tool added"
              },
              "fullDescription": {
                "text": "A new tool has been added since the baseline was captured. Review the new tool carefully for unexpected functionality."
              },
              "helpUri": "https://github.com/TsvetanG2/mcpward/blob/main/docs/rules.md#drifttool_added",
              "defaultConfiguration": {
                "level": "warning"
              },
              "properties": {
                "category": "maintainability",
                "security": false
              }
            },
            {
              "id": "behavioral-case",
              "name": "behavioral/case",
              "shortDescription": {
                "text": "behavioral/case"
              },
              "fullDescription": {
                "text": "A behavioral test case failed. The tool output did not match the expected result defined in the test suite."
              },
              "helpUri": "https://github.com/TsvetanG2/mcpward/blob/main/docs/rules.md#behavioralcase",
              "defaultConfiguration": {
                "level": "error"
              },
              "properties": {
                "category": "general",
                "security": false
              }
            },
            {
              "id": "errors-unknown-tool",
              "name": "errors/unknown-tool",
              "shortDescription": {
                "text": "errors/unknown-tool"
              },
              "fullDescription": {
                "text": "Calling an unknown tool should return a JSON-RPC protocol error, not a tool-level error with isError:true."
              },
              "helpUri": "https://github.com/TsvetanG2/mcpward/blob/main/docs/rules.md#errorsunknown-tool",
              "defaultConfiguration": {
                "level": "error"
              },
              "properties": {
                "category": "general",
                "security": false
              }
            },
            {
              "id": "latency-summary",
              "name": "latency/summary",
              "shortDescription": {
                "text": "latency/summary"
              },
              "fullDescription": {
                "text": "latency/summary"
              },
              "helpUri": "https://github.com/TsvetanG2/mcpward/blob/main/docs/rules.md#latencysummary",
              "defaultConfiguration": {
                "level": "warning"
              },
              "properties": {
                "category": "general",
                "security": false
              }
            }
          ]
        }
      },
      "results": [
        {
          "ruleId": "schema-tool-name",
          "level": "error",
          "message": {
            "text": "Tool name \\"invalid name\\" contains invalid characters"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "mcpward.yaml",
                  "uriBaseId": "%SRCROOT%"
                }
              },
              "logicalLocations": [
                {
                  "name": "invalid name",
                  "kind": "tool"
                }
              ]
            }
          ],
          "properties": {
            "expected": "Name matching ^[a-zA-Z0-9_-]+$",
            "actual": "invalid name",
            "family": "schema"
          }
        },
        {
          "ruleId": "security-injection-pattern",
          "level": "error",
          "message": {
            "text": "Tool \\"evil_tool\\" description contains injection-like pattern"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "mcpward.yaml",
                  "uriBaseId": "%SRCROOT%"
                }
              },
              "logicalLocations": [
                {
                  "name": "evil_tool",
                  "kind": "tool"
                }
              ]
            }
          ],
          "properties": {
            "actual": [
              "Ignore all previous instructions"
            ],
            "family": "security"
          }
        },
        {
          "ruleId": "drift-tool_added",
          "level": "warning",
          "message": {
            "text": "New tool \\"new_feature\\" was added"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "mcpward.yaml",
                  "uriBaseId": "%SRCROOT%"
                }
              },
              "logicalLocations": [
                {
                  "name": "new_feature",
                  "kind": "tool"
                }
              ]
            }
          ],
          "properties": {
            "family": "drift"
          }
        }
      ],
      "invocations": [
        {
          "executionSuccessful": false,
          "endTimeUtc": "2024-01-15T10:30:00.000Z"
        }
      ]
    }
  ]
}"
`;
